# webinar-open-exception-noexcept

./: .clang-tidy  CMakeLists.txt  error_code.cpp  exception_basic.cpp  exception_no_garanty.cpp  exception_no_garanty_fix.cpp  noexcept.cpp  noexcept_detect.cpp  noexcept_usage.cpp
